# the-above

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  PLAN.md  PROGRESS.md
artgen/: pyproject.toml
artgen/artgen/: __init__.py  __main__.py  build.py  canvas.py  lint.py  palette.py
artgen/artgen/sprites/: __init__.py  cast_portraits.py  cast_sheets.py  placeholder_hoca.py
artgen/artgen/tiles/: __init__.py  dolmus_interior.py  graybox.py  home_interior.py  obs_interior.py  town_exterior.py
artgen/cast/: characters.json
artgen/manifests/: cast_portraits.json  cast_sheets.json  char_placeholder.json  tiles_dolmus.json  tiles_graybox.json  tiles_home.json  tiles_obs.json  tiles_town.json
artgen/palettes/: the_above.json
artgen/tests/: test_determinism.py  test_palette_canvas.py
artgen/tools/: patch_turkish_glyphs.py
docs/decisions/: 0001-godot-version.md  0002-m4-act1-world-codex-handoff.md  0003-m5-vertical-slice-decomposition.md
game/: export_presets.cfg  project.godot
game/locale/: act1_dialogue.csv  act1_dialogue.csv.import  ui.csv  ui.csv.import
game/scripts/: main.gd  main.gd.uid
game/tests/: test_act1_content_coverage.gd  test_act1_content_coverage.gd.uid  test_day_loop.gd  test_day_loop.gd.uid  test_dialogue_parser.gd  test_dialogue_parser.gd.uid  test_dialogue_runner.gd  test_dialogue_runner.gd.uid  test_game_state.gd  test_game_state.gd.uid  test_locale.gd  test_locale.gd.uid  test_meta_persistence.gd  test_meta_persistence.gd.uid  test_mission_library.gd  (+21 more)
story/: bible.md  characters.md  clip-anchors.md  secret-bible.md
(+354 files in other folders)
